[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-bot"
version = "1.0.0"
description = "Telegram бот поддержки на aiogram"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Support Bot" }
]
keywords = ["telegram", "aiogram", "bot", "support", "helpdesk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
]
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "SQLAlchemy>=2.0.0",
  "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
]

[project.urls]
Homepage = "https://example.com/support-bot"
Repository = "https://example.com/support-bot/repo"
Documentation = "https://example.com/support-bot#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", "data*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
force_single_line = false
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
