[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-bot"
version = "1.0.0"
description = "Поддержка в телеграм"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Support Bot", email = "sergeyrootuser@gmail.com" }
]
keywords = ["telegram", "bot", "support"]
dependencies = [
  "aiogram>=3.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "SQLAlchemy>=2.0.0",
  "aiosqlite>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/EgorRU/support-bot"
Repository = "https://github.com/EgorRU/support-bot"
Documentation = "https://github.com/EgorRU/support-bot#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["venv*"]